# literarycreation

./: .env.example  .gitattributes  .gitignore  README.md  build.ps1  literary-creation-backend.spec  pyproject.toml  run.py
.github/workflows/: release.yml
apps/literary-creation/: index.html  package-lock.json  package.json  vite.config.ts
apps/literary-creation/src/: App.tsx
apps/literary-creation/src-tauri/: Cargo.toml  tauri.conf.json
apps/literary-creation/src-tauri/nsis/: uninstall_hook.nsh
apps/literary-creation/src-tauri/src/: main.rs
data/: blueprint_raw_test.txt  blueprint_simple_raw.txt
data/custom_dict/: classic_names.txt
data/rule/: rules.json
scripts/: _test_blueprint_raw.py  test_algorithms_lmstudio.py  test_architecture_lmstudio.py  test_conditional_delay_auto_lmstudio.py  test_context_stress_lmstudio.py  test_db_synergy.py  test_dedup_fix.py  test_e2e_9b_lit.py  test_e2e_narrative.py  test_embed_graph_e2e.py  test_fsm_config_lmstudio.py  test_full_e2e.py  test_geo_strategy.py  test_graph_fulllink_lmstudio.py  test_lancedb_fulllink_lmstudio.py  test_llm_entity.py  test_multi_action_lmstudio.py  test_multiagent_compare.py  test_ode_n37_lmstudio.py  test_optimizer_lmstudio.py  test_optimizer_report_lmstudio.py  test_parallel.py  test_pause_resume_lmstudio.py  test_prose_retry.py  test_quantified_lmstudio.py  test_report_gen.py  test_summary_ctx_lmstudio.py  test_temperature.py
src/literarycreation/: __init__.py  main.py
src/literarycreation/algorithms/: __init__.py  base.py  character_consistency.py  conflict_progression.py  fsm_module.py  module_utils.py  ode_module.py  opinion_dynamics.py  outline_control.py  pacing_analyzer.py  physics_module.py  pipeline_engine.py
src/literarycreation/api/: __init__.py  config_routes.py  routes.py
src/literarycreation/core/: chunker.py  config.py  llm_client.py  (+5 more)
tests/: test_algorithms.py  test_blueprint_canon.py  test_causal_graph.py  test_graph_format_fix.py  test_graph_race.py  test_narrative_modules.py
tests/functional/: test_literarycreation_e2e.py
(+32 files in other folders)
