[package]
name = "literary-creation"
version = "0.1.0"
description = "LiteraryCreation — 文学创作助手"
edition = "2021"

[package.metadata]
authors = ["LiteraryCreation"]

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"

[build-dependencies]
tauri-build = { version = "2", features = [] }
